add zst compression level to archive dialog a small fix

--- a/app/src/main/res/layout/seven_z_option_dialog.xml
+++ b/app/src/main/res/layout/seven_z_option_dialog.xml
@@ -214,6 +214,7 @@
                         android:visibility="gone"/>
 
                     <TextView
+                        android:id="@+id/threadCountText"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/specify_custom_thread_count"
