--- a/app/src/main/res/layout/bottom_sheet_compressor_archive.xml
+++ b/app/src/main/res/layout/bottom_sheet_compressor_archive.xml
@@ -123,8 +123,9 @@
             android:id="@+id/btnOpenWith"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="16dp"
             android:layout_marginStart="16dp"
+            android:layout_marginBottom="20dp"
             style="@style/Widget.Material3.Button.OutlinedButton"
             android:layout_marginEnd="16dp"
             android:text="@string/open_with"
@@ -186,71 +187,69 @@
             android:layout_marginEnd="16dp"
             android:layout_marginTop="20dp"/>
 
-        <LinearLayout
+        <com.google.android.material.chip.ChipGroup
+            android:id="@+id/chipGroupCompression"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:orientation="horizontal">
+            android:paddingStart="16dp"
+            android:paddingEnd="16dp">
 
-            <com.google.android.material.button.MaterialButton
+            <com.google.android.material.chip.Chip
                 android:id="@+id/btnLzma"
-                android:layout_width="0dp"
+                style="@style/Widget.Material3.Chip.Suggestion.Elevated"
+                app:chipCornerRadius="8dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/lzma"
-                style="@style/Widget.Material3.Button.TonalButton"
-                android:layout_marginStart="16dp"
-                android:layout_weight="1"
-                app:cornerRadius="10dp"/>
+                android:clickable="true"
+                android:focusable="true"
+                android:checkable="false"/>
 
-            <com.google.android.material.button.MaterialButton
+            <com.google.android.material.chip.Chip
                 android:id="@+id/btnBzip2"
-                android:layout_width="0dp"
+                style="@style/Widget.Material3.Chip.Suggestion.Elevated"
+                app:chipCornerRadius="8dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/bzip2"
-                style="@style/Widget.Material3.Button.TonalButton"
-                android:layout_marginStart="10dp"
-                android:layout_weight="1"
-                android:layout_marginEnd="16dp"
-                app:cornerRadius="10dp"/>
-        </LinearLayout>
+                android:clickable="true"
+                android:focusable="true"
+                android:checkable="false"/>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:orientation="horizontal">
-
-            <com.google.android.material.button.MaterialButton
+            <com.google.android.material.chip.Chip
                 android:id="@+id/btnXz"
-                android:layout_width="0dp"
+                style="@style/Widget.Material3.Chip.Suggestion.Elevated"
+                app:chipCornerRadius="8dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/xz"
-                style="@style/Widget.Material3.Button.TonalButton"
-                android:layout_weight="1"
-                android:layout_marginStart="16dp"
-                app:cornerRadius="10dp"/>
+                android:clickable="true"
+                android:focusable="true"
+                android:checkable="false"/>
 
-            <com.google.android.material.button.MaterialButton
+            <com.google.android.material.chip.Chip
                 android:id="@+id/btnGzip"
-                android:layout_width="0dp"
+                style="@style/Widget.Material3.Chip.Suggestion.Elevated"
+                app:chipCornerRadius="8dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/gzip"
-                style="@style/Widget.Material3.Button.TonalButton"
-                android:layout_marginStart="10dp"
-                android:layout_weight="1"
-                app:cornerRadius="10dp"/>
+                android:clickable="true"
+                android:focusable="true"
+                android:checkable="false"/>
 
-            <com.google.android.material.button.MaterialButton
+            <com.google.android.material.chip.Chip
                 android:id="@+id/btnZstd"
-                android:layout_width="0dp"
+                style="@style/Widget.Material3.Chip.Suggestion.Elevated"
+                app:chipCornerRadius="8dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/zstd"
-                style="@style/Widget.Material3.Button.TonalButton"
-                android:layout_marginStart="10dp"
-                android:layout_marginEnd="16dp"
-                android:layout_weight="1"
-                app:cornerRadius="10dp"/>
-        </LinearLayout>
+                android:clickable="true"
+                android:focusable="true"
+                android:checkable="false"/>
+        </com.google.android.material.chip.ChipGroup>
 
         <com.google.android.material.divider.MaterialDivider
             android:layout_width="match_parent"
