--- a/app/src/main/res/layout/bottom_sheet_option.xml
+++ b/app/src/main/res/layout/bottom_sheet_option.xml
@@ -132,7 +132,8 @@
                 style="@style/Widget.Material3.Button.OutlinedButton"
                 android:layout_marginStart="8dp"
                 android:layout_marginEnd="8dp"
-                android:layout_marginTop="20dp"
+                android:layout_marginBottom="20dp"
+                android:layout_marginTop="16dp"
                 app:cornerRadius="10dp"/>
        </LinearLayout>
 
