--- a/app/src/main/res/layout/bottom_sheet_option.xml
+++ b/app/src/main/res/layout/bottom_sheet_option.xml
@@ -116,9 +116,10 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="16dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginEnd="16dp"
+                android:layout_marginBottom="20dp"
                 android:text="@string/preview_archive"
                 android:visibility="gone"
                 app:cornerRadius="10dp" />
