--- a/app/src/main/res/layout/bottom_sheet_compressor_archive.xml
+++ b/app/src/main/res/layout/bottom_sheet_compressor_archive.xml
@@ -97,18 +97,18 @@
                 android:ellipsize="middle"
                 android:maxLines="1"
                 app:layout_constraintStart_toEndOf="@+id/cardView"
-                app:layout_constraintEnd_toStartOf="@+id/btnShare"
+                app:layout_constraintEnd_toStartOf="@+id/btnFileInfo"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <ImageButton
                 android:id="@+id/btnFileInfo"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:layout_marginEnd="0dp"
+                android:layout_marginEnd="5dp"
                 android:src="@drawable/ic_info"
                 android:contentDescription="@string/file_info"
                 android:background="?attr/selectableItemBackgroundBorderless"
-                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/btnShare"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:tint="?attr/colorOnSurface" />
@@ -117,11 +117,11 @@
                 android:id="@+id/btnShare"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:layout_marginEnd="5dp"
+                android:layout_marginEnd="0dp"
                 android:src="@drawable/ic_share"
                 android:contentDescription="@string/share_file"
                 android:background="?attr/selectableItemBackgroundBorderless"
-                app:layout_constraintEnd_toStartOf="@id/btnFileInfo"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:tint="?attr/colorOnSurface" />
