--- a/app/src/main/res/layout/bottom_sheet_compressor_archive.xml
+++ b/app/src/main/res/layout/bottom_sheet_compressor_archive.xml
@@ -35,7 +35,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="50dp"
+            android:layout_marginTop="40dp"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp">
 
@@ -48,9 +48,8 @@
                 android:alpha="0.7"
                 android:text="TextView"
                 android:textSize="12sp"
-                android:layout_marginStart="10dp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toEndOf="@id/fileSize" />
+                app:layout_constraintEnd_toEndOf="parent"/>
 
             <TextView
                 android:id="@+id/fileSize"
@@ -91,40 +90,13 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
-                android:layout_marginEnd="8dp"
                 android:text="TextView"
                 android:textSize="15sp"
                 android:ellipsize="middle"
                 android:maxLines="1"
                 app:layout_constraintStart_toEndOf="@+id/cardView"
-                app:layout_constraintEnd_toStartOf="@+id/btnFileInfo"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <ImageButton
-                android:id="@+id/btnFileInfo"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_marginEnd="5dp"
-                android:src="@drawable/ic_info"
-                android:contentDescription="@string/file_info"
-                android:background="?attr/selectableItemBackgroundBorderless"
-                app:layout_constraintEnd_toStartOf="@id/btnShare"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:tint="?attr/colorOnSurface" />
-
-            <ImageButton
-                android:id="@+id/btnShare"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_marginEnd="0dp"
-                android:src="@drawable/ic_share"
-                android:contentDescription="@string/share_file"
-                android:background="?attr/selectableItemBackgroundBorderless"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:tint="?attr/colorOnSurface" />
+                app:layout_constraintTop_toTopOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <com.google.android.material.divider.MaterialDivider
@@ -134,17 +106,47 @@
             android:layout_marginTop="5dp"
             android:layout_marginEnd="16dp"/>
 
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/btnOpenWith"
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginBottom="20dp"
-            style="@style/Widget.Material3.Button.OutlinedButton"
-            android:layout_marginEnd="16dp"
-            android:text="@string/open_with"
-            app:cornerRadius="10dp"/>
+            android:layout_marginStart="14dp"
+            android:layout_marginEnd="12dp"
+            android:layout_marginTop="10dp">
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/btnOpenWith"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                style="@style/Widget.Material3.Button.TonalButton"
+                android:layout_alignParentStart="true"
+                android:text="@string/open_with" />
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/btnDelete"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
+                android:layout_alignParentEnd="true"
+                android:backgroundTint="?attr/colorErrorContainer"
+                app:iconTint="?attr/colorError"
+                app:icon="@drawable/ic_delete_forever"/>
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/btnShare"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_toEndOf="@id/btnOpenWith"
+                style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
+                app:icon="@drawable/ic_share"/>
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/btnFileInfo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_toEndOf="@id/btnShare"
+                style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
+                app:icon="@drawable/ic_info"/>
+        </RelativeLayout>
 
         <TextView
             android:id="@+id/lowStorageWarning"
@@ -163,7 +165,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="20dp"
             app:boxCornerRadiusTopStart="10dp"
             app:boxCornerRadiusTopEnd="10dp"
             app:boxCornerRadiusBottomStart="10dp"
@@ -189,8 +191,7 @@
             android:layout_marginStart="16dp"
             style="@style/Widget.Material3.Button.TonalButton"
             android:layout_marginEnd="16dp"
-            android:text="@string/extract"
-            app:cornerRadius="10dp"/>
+            android:text="@string/extract"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -265,26 +266,5 @@
                 android:focusable="true"
                 android:checkable="false"/>
         </com.google.android.material.chip.ChipGroup>
-
-        <com.google.android.material.divider.MaterialDivider
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="50dp"
-            android:layout_marginBottom="10dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"/>
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/btnDelete"
-            style="@style/Widget.Material3.Button.OutlinedButton"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:cornerRadius="10dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginBottom="20dp"
-            android:text="@string/delete"
-            app:strokeColor="?attr/colorError"
-            android:textColor="?attr/colorError" />
     </LinearLayout>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
