--- a/app/src/main/res/layout/zip_option_dialog.xml
+++ b/app/src/main/res/layout/zip_option_dialog.xml
@@ -428,7 +428,6 @@
             style="@style/Widget.Material3.Button.TonalButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/archive"
-            app:cornerRadius="10dp"/>
+            android:text="@string/archive"/>
     </LinearLayout>
 </RelativeLayout>
